2015-10-19  James Hunt  <jamesodhunt@ubuntu.com>

	* man/procenv.1: Replace hard-coded utf character with unicode
	  escape equivalent to suppress warning on Fedora.

2015-09-28  James Hunt  <jamesodhunt@ubuntu.com>

	* src/procenv.c:
	  - Correct output order for 'libc:' and 'misc:'.
	* src/procenv.h:
	  - Bump PROCENV_FORMAT_VERSION.
	* src/tests/check_all_args.in:
	  - Ensure output sections are sorted and not duplicated.

2015-09-27  James Hunt  <jamesodhunt@ubuntu.com>

	* src/Makefile.am:
	  - Pass path to man page to tests.
	* src/tests/check_all_args.in:
	  - Set LC_ALL to the lang value under test.
	  - Actually save the original LANG value.
	  - 'set -e' fix.
	  - Add test to compare options documented by 'procenv --help' with
	    those in the man page to ensure no discrepancies.

2015-09-25  James Hunt  <jamesodhunt@ubuntu.com>

	* src/procenv.c:
	  - show_libc(): New function for new '--libc'/'-B'
	    option.
	  - show_compiler(): Added following features:
	    - _DEFAULT_SOURCE
	    - _LARGEFILE_SUPPORT
	    - __STDC_VERSION__
	* configure.ac: Add '--enable-reproducible-build' option which
	  suppresses the display of values that will change between
	  builds:
	  - __DATE__
	  - __TIME__
	  - __TIMESTAMP__

2015-08-24  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Actually disable tests if non-existent
	  locale found.

2015-08-23  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: Coverity fixes:
	  - get_mtu(): Drop useless goto and explicit zero return on error.
	  - get_canonical(): safer string termination.
	  - Allow '--indent-char' to be UTF-8.
	* src/tests/check_all_args.in:
	  - New single-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	  - New multi-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	    - '--crumb-separator'.
	  - Check default locale is valid before attempting to use it.

2015-08-22  James Hunt  <james.hunt@ubuntu.com>
